--- a/templates/find_entry.html
+++ b/templates/find_entry.html
@@ -1,8 +1,8 @@
 <html>
 
 <form action ="{{ url_for('sign_in') }}" method="post">
-    <p> username : <input type="text" name="name"></p>
-    <p> password: <input type="password" password="passwd" ></p>
+    <p> username: <input type="text" name="name"></p>
+    <p> password: <input type="password" password="password" ></p>
 
     <p> <input type="submit" value="submit" ></p>
 </form>
