--- a/templates/login.html
+++ b/templates/login.html
@@ -3,11 +3,15 @@
     <link rel="stylesheet" href="../static/css/style.css">
 </head>
 
-<body>
-
-<h1>Hello World!</h1>
-<h1>
-
-</h1>
-</body>
+{% block body %}
+{% if session['logged_in'] %}
+<p>You're logged in already!</p>
+{% else %}
+<form action="/login" method="POST">
+  <input type="username" name="username" placeholder="Username">
+  <input type="password" name="password" placeholder="Password">
+  <input type="submit" value="Log in">
+</form>
+{% endif %}
+{% endblock %}
 </html>
